--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -37,8 +37,8 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
   --backgroundColor01: #1e2731;
   --backgroundColor02: #12171d;
   --mainColor: #2275c9;
-  --gradientColor01: #00F260;
-  --gradientColor02: #0575E6;
+  --gradientColor01: #DB4237;
+  --gradientColor02: #E6BA5C;
 
   /* Better Hljs */
   --backgroundCode: #1e2731;
