--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -36,7 +36,7 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 :root {
   --backgroundColor01: #1e2731;
   --backgroundColor02: #12171d;
-  --mainColor: #2275c9;
+  --mainColor: #db4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
 
