--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -34,8 +34,8 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://xcruxiex.github.io/themes/core/custom-font.css");
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #1e2731;
-  --backgroundColor02: #12171d;
+  --backgroundColor01: #301d26;
+  --backgroundColor02: #1c1116;
   --mainColor: #db4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
