--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -41,7 +41,7 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
   --gradientColor02: #E6BA5C;
 
   /* Better Hljs */
-  --backgroundCode: #1e2731;
+  --backgroundCode: #301d26;
   --backgroundName: rgba(0, 0, 0, .2);
 
   /* Radial Status */
