--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -34,14 +34,14 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://xcruxiex.github.io/themes/core/custom-font.css");
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #301d26;
-  --backgroundColor02: #1c1116;
-  --mainColor: #db4136;
+  --backgroundColor01: #301D26;
+  --backgroundColor02: #1C1116;
+  --mainColor: #DB4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
 
   /* Better Hljs */
-  --backgroundCode: #301d26;
+  --backgroundCode: #301D26;
   --backgroundName: rgba(0, 0, 0, .2);
 
   /* Radial Status */
