--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -34,14 +34,14 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://xcruxiex.github.io/themes/core/custom-font.css");
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #1E0403;
-  --backgroundColor02: #1E0403;
+  --backgroundColor01: #000000;
+  --backgroundColor02: #000000;
   --mainColor: #DB4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
 
   /* Better Hljs */
-  --backgroundCode: #1E0403;
+  --backgroundCode: #000000;
   --backgroundName: rgba(0, 0, 0, .2);
 
   /* Radial Status */
