--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -34,8 +34,8 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://xcruxiex.github.io/themes/core/custom-font.css");
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #2B2D33;
-  --backgroundColor02: #2B2D33;
+  --backgroundColor01: #454851;
+  --backgroundColor02: #454851;
   --mainColor: #DB4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
