--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -35,7 +35,7 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css"); /* Radial Status */
 :root {
   --backgroundColor01: #131417;
-  --backgroundColor02: #1e2731;
+  --backgroundColor02: #0D0D0F;
   --mainColor: #DB4136;
   --gradientColor01: #DB4237;
   --gradientColor02: #E6BA5C;
